--- a/src/styles/Body.css
+++ b/src/styles/Body.css
@@ -2,3 +2,49 @@ div > span {
   display: flex;
   justify-content: space-around;
 }
+.Body_maindav {
+  margin-top: 30px;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+body,
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.con-min-width {
+  min-width: 1200px;
+
+  height: 60px;
+}
+.con {
+  margin: 0 auto;
+  width: 1200px;
+  display: flex;
+  height: 100%;
+}
+.app-title {
+  display: flex;
+  color: white;
+  font-size: 1.5rem;
+  justify-content: center;
+
+  height: 100%;
+  margin: 0 auto;
+  align-items: center;
+}
+.Headr_divmain {
+  display: flex;
+  border: 3px solid red;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+.Headr_didiwk12 {
+  border: 3px solid black;
+}
