--- a/src/styles/Head.css
+++ b/src/styles/Head.css
@@ -8,24 +8,27 @@ li {
   margin: 0;
   padding: 0;
   list-style: none;
+  border: 3px solidred blue;
 }
 
 .con-min-width {
   min-width: 1200px;
-  background: #383636;
+  background: black;
   height: 60px;
 }
-.con {
+.app-title {
   margin: 0 auto;
   width: 1200px;
   display: flex;
   height: 100%;
+  border: 3px solidred yellow;
 }
 .app-title {
   display: flex;
   color: white;
   font-size: 1.5rem;
   justify-content: center;
+  border: 3px solidred wheat;
 
   height: 100%;
   margin: 0 auto;
